--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
   <head>
+<link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="header-bar">
       <h1>This is a Test Site</h1>
       <p>This is normally hidden!</p>
     </div>
+<img src="/resources/img_jellyfish.jpg/" alt="jellyfish">
     <div class="banner">
-      <img src="Resources/jellyfish.png">
       <div class="centered">
         <div class="content">Hello!</div>
         <div><a class="btn" href="https://www.veeva.com/" target="_blank"> Click Here </a></div>
